--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ body.theme-3 {
 }
 body {
   background-color: var(--main-bg);
+  transition: all 0.2s;
 }
 .container {
   /* color: var(--theme-2-color-1); */
