--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,9 @@ span {
   width: 100%;
 }
 
+.slider {
+  -webkit-appearance: none;
+}
 
 /* manipulating the little circle inside the slider */
 
